XWIKI-23991: LiveData pagination status is too visible * Updated the navigation buttons for the `#pagination` velocimacro * Fixed padding

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/pagination/pagination.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/pagination/pagination.css
@@ -34,7 +34,7 @@
   align-items: baseline;
   flex-wrap: wrap;
 }
-.pagination-item .btn {
+.pagination-item .btn, .controlPagination .btn {
   border-width: 2px;
   border-color: transparent;
 
